changes to frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Antonio Ricardo Cumberbatch, <span>Systems Engineer at <a href="https://www.linkedin.com/company/pbstechgroup/mycompany/">PBS Technologies Trinidad</a></span>,
+            <p> Hi, I'm Antonio Cumberbatch, <span>Systems Engineer at <a href="https://www.linkedin.com/company/pbstechgroup/mycompany/">PBS Technologies Trinidad</a></span>,
                focused on making cloud learning more accessible and less daunting for everyone. 
             
          </br>
