--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,7 +58,7 @@
             
             <p>and this page has been viewed <a id="counter"></a> times :) </p> 
             <ul class="social">
-               <li><a href="https://antoniocumberbatch.com"><i class="fa fa-external-link"></i></a></li>
+               <li><a href="https://www.antoniocumberbatch.com"><i class="fa fa-external-link"></i></a></li>
                <li><a href="https://www.linkedin.com/in/antonio-cumberbatch-484433137/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/_t.o.n.i.o/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="https://github.com/strikerX121/azure-resume-challen"><i class="fa fa-github"></i></a></li>
